Переделал на Ðмассивы на List