@@ -1,47 +1,63 @@
 package org.example;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 
-public class InputHandler {
-
-    private final List<String> operators = Arrays.asList("+", "-", "/", "*");
-    private final Map<String, Integer> romeNumbers = createRomeNumbersMap();
-    private final String romeType = "rome";
-    private final String arabicType = "arab";
+public class InputHandler implements InputHandlerInterface {
+    private final String NOT_ZERO_IN_ROME = "В римской системе счисления нет 0";
+    private final String NEGATIVE_NUMBER_IN_ROME = "В римской системе счисления нет отрицательных чисел";
+    private final String DIFFERENT_EXPRESSION_TYPE = "Используются разные системы счисления";
+    private final String isMathRegularExpression = "^[\\-]?([I|X|V|C|L|D|M|i|x|v|c|l|d|m]+|[\\d]+)\\s[\\+\\-\\/\\*]\\s[\\-]?([I|X|V|C|L|D|M|i|x|v|c|l|d|m]+|[\\d]+)$";
+    private final String isNegativeNumberRegularExpression = "^[\\-]([I|X|V|C|L|D|M]+|[\\d]+)$";
+    private final String isRomeRegularExpression = "^[\\-]?[I|X|V|C|L|D|M|i|x|v|c|l|d|m]+\\s[\\+\\-\\/\\*]\\s[\\-]?[I|X|V|C|L|D|M|i|x|v|c|l|d|m]+$";
+    private final String isArabicRegularExpression = "^[\\-]?[\\d]+\\s[\\+\\-\\/\\*]\\s[\\-]?[\\d]+$";
+    private final List<String> OPERATORS = List.of("+", "-", "/", "*");
+    private final Map<String, Integer> ROME_NUMBERS = Map.of(
+            "I", 1,
+            "II", 2,
+            "III", 3,
+            "IV", 4,
+            "V", 5,
+            "VI", 6,
+            "VII", 7,
+            "IIX", 8,
+            "IX", 9,
+            "X", 10);
+    private final String ROME_TYPE = "ROME";
+    private final String ARABIC_TYPE = "ARAB";
     private int x;
     private int y;
     private String action;
     private String expressionType;
 
-    InputHandler() {
+    InputHandler() {}
 
-    }
-
-    public String getResult(String expression) {
-        try {
-            checkExpressionString(expression);
-            action = getFilteredArrayFromInput(expression)[1];
-            setNumbers(expression);
-            float result = calculate();
-            checkResult(result);
-            return convertResult(result);
-        } catch (Exception e) {
-            System.out.println(e.getMessage());
-            System.exit(0);
+    public String getResult(String expression) throws Exception {
+        checkExpressionString(expression);
+        action = getFilteredArrayFromInput(expression).get(1);
+        setNumbers(expression);
+        float resultNumber = calculate();
+        if (Objects.equals(expressionType, ROME_TYPE)) {
+            checkRomeTypeResultOnZeroAndNegativeNumbers(resultNumber);
         }
-        return "";
+        return convertResultArabToRome(resultNumber);
     }
 
-    private void checkResult(float result) throws Exception {
-        if (Objects.equals(expressionType, romeType)) {
-            if (result == 0) throw new Exception("В римской системе счисления нет 0");
-            if (result < 0) throw new Exception("В римской системе счисления нет отрицательных чисел");
+    private void checkRomeTypeResultOnZeroAndNegativeNumbers(float result) throws Exception {
+        if (result == 0) {
+            throw new Exception(NOT_ZERO_IN_ROME);
+        }
+        if (result < 0) {
+            throw new Exception(NEGATIVE_NUMBER_IN_ROME);
         }
     }
 
 
-    private String convertResult(float result) {
-        if (Objects.equals(expressionType, romeType)) {
+    private String convertResultArabToRome(float result) {
+        if (Objects.equals(expressionType, ROME_TYPE)) {
             return convertArabNumberToRome(result);
         }
         return Float.toString(result);
@@ -49,15 +65,13 @@ public class InputHandler {
 
 
     private void checkExpressionString(String mathExpression) throws Exception {
-        String[] expressionArray = getFilteredArrayFromInput(mathExpression);
-        String isMathRegularExpression = "^[\\-]?([I|X|V|C|L|D|M|i|x|v|c|l|d|m]+|[\\d]+)\\s[\\+\\-\\/\\*]\\s[\\-]?([I|X|V|C|L|D|M|i|x|v|c|l|d|m]+|[\\d]+)$";
-        String isNegativeNumberRegularExpression = "^[\\-]([I|X|V|C|L|D|M]+|[\\d]+)$";
+        List<String> expressionArray = getFilteredArrayFromInput(mathExpression);
         if (!mathExpression.matches(isMathRegularExpression))
             throw new Exception("Некорректный формат математической операции");
         setExpressionType(mathExpression);
-        if (!operators.contains(expressionArray[1])) throw new Exception("Некоректное математическое действие");
-        if (expressionArray[0].matches(isNegativeNumberRegularExpression) || expressionArray[2].matches(isNegativeNumberRegularExpression)) {
-            if (Objects.equals(expressionType, romeType))
+        if (!OPERATORS.contains(expressionArray.get(1))) throw new Exception("Некоректное математическое действие");
+        if (expressionArray.get(0).matches(isNegativeNumberRegularExpression) || expressionArray.get(2).matches(isNegativeNumberRegularExpression)) {
+            if (Objects.equals(expressionType, ROME_TYPE))
                 throw new Exception("В римской системе счисления нет отрицательных чисел");
             throw new Exception("Ошибка : отрицательные числа запрещены");
         }
@@ -65,13 +79,13 @@ public class InputHandler {
 
 
     private void setExpressionType(String mathExpression) throws Exception {
-        boolean isRomeRegularExpression = mathExpression.matches("^[\\-]?[I|X|V|C|L|D|M|i|x|v|c|l|d|m]+\\s[\\+\\-\\/\\*]\\s[\\-]?[I|X|V|C|L|D|M|i|x|v|c|l|d|m]+$");
-        boolean isArabicExpression = mathExpression.matches("^[\\-]?[\\d]+\\s[\\+\\-\\/\\*]\\s[\\-]?[\\d]+$");
-        if (isRomeRegularExpression && isArabicExpression) throw new Exception("Используются разные системы счисления");
+        boolean isRomeExpression = mathExpression.matches(isRomeRegularExpression);
+        boolean isArabicExpression = mathExpression.matches(isArabicRegularExpression);
+        if (isRomeExpression && isArabicExpression) throw new Exception(DIFFERENT_EXPRESSION_TYPE);
         if (isArabicExpression) {
-            expressionType = arabicType;
-        } else if (isRomeRegularExpression) {
-            expressionType = romeType;
+            expressionType = ARABIC_TYPE;
+        } else if (isRomeExpression) {
+            expressionType = ROME_TYPE;
         }
     }
 
@@ -91,18 +105,18 @@ public class InputHandler {
 
 
     private void setNumbers(String mathExpression) throws Exception {
-        String[] expressionArray = getFilteredArrayFromInput(mathExpression);
+        List<String> expressionArray = getFilteredArrayFromInput(mathExpression);
         String smallRomeNumbers = "[i|x|v|c|l|d|m]";
-        if (Objects.equals(expressionType, romeType) && (expressionArray[0].matches(smallRomeNumbers) || expressionArray[2].matches(smallRomeNumbers)))
+        if (Objects.equals(expressionType, ROME_TYPE) && (expressionArray.get(0).matches(smallRomeNumbers) || expressionArray.get(2).matches(smallRomeNumbers)))
             throw new Exception("В римской системе буквы должны быть заглавными");
 
-        if (Objects.equals(expressionType, romeType)) {
-            checkRomeNumbers(expressionArray[0], expressionArray[2]);
-            x = convertRomeToArabNumber(expressionArray[0]);
-            y = convertRomeToArabNumber(expressionArray[2]);
+        if (Objects.equals(expressionType, ROME_TYPE)) {
+            checkRomeNumbers(expressionArray.get(0), expressionArray.get(2));
+            x = convertRomeToArabNumber(expressionArray.get(0));
+            y = convertRomeToArabNumber(expressionArray.get(2));
         } else {
-            x = Integer.parseInt(expressionArray[0]);
-            y = Integer.parseInt(expressionArray[2]);
+            x = Integer.parseInt(expressionArray.get(0));
+            y = Integer.parseInt(expressionArray.get(2));
         }
         if ((x < 0 || x > 10) || (y < 0 || y > 10))
             throw new Exception("Числа должны быть в промежутке от 0 до 10");
@@ -121,11 +135,11 @@ public class InputHandler {
         char[] charRomeNumber = romeNumber.toCharArray();
         int summ = 0;
         for (int i = romeNumberLength; i >= 0; i--) {
-            int currentNumber = romeNumbers.get(charRomeNumber[i] + "");
+            int currentNumber = ROME_NUMBERS.get(charRomeNumber[i] + "");
             if (i - 1 >= 0) {
-                int prevNumber = romeNumbers.get(charRomeNumber[i - 1] + "");
+                int prevNumber = ROME_NUMBERS.get(charRomeNumber[i - 1] + "");
                 if (currentNumber > prevNumber) {
-                    summ += romeNumbers.get(charRomeNumber[i - 1] + "" + charRomeNumber[i]);
+                    summ += ROME_NUMBERS.get(charRomeNumber[i - 1] + "" + charRomeNumber[i]);
                     i--;
                 } else {
                     summ += currentNumber;
@@ -142,8 +156,8 @@ public class InputHandler {
     }
 
 
-    private String[] getFilteredArrayFromInput(String str) {
-        return Arrays.stream(str.split(" ")).filter((x) -> !x.isEmpty()).toArray(String[]::new);
+    private List<String> getFilteredArrayFromInput(String str) {
+        return List.of(Arrays.stream(str.split(" ")).filter((x) -> !x.isEmpty()).toArray(String[]::new));
     }
 
     private static Map<String, Integer> createRomeNumbersMap() {
